fix: avatar z-index

--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
+body{
+    background-color: aquamarine;
+}
+
 .container{
     margin-top: 10%;
     margin-left: auto;
     margin-right: auto;
     width: 30%;
     border-radius: 15px;
-    box-shadow: 10px 10px 10px rgb(192, 192, 192);;
+    box-shadow: 10px 10px 10px rgb(192, 192, 192);
+    
 }
  
  .flex-container-card{
      display: flex;
      justify-content: center;
      flex-direction: row;
+     background-color: white;
  }
 
  .flex-container-element{
@@ -25,17 +31,18 @@
     font-size: 20px;
   }
 
-  #avatar-bg{
+#avatar-bg{
     border-radius: 15px;
     position: absolute;
     margin-left: auto;
     margin-right: auto;
     padding-bottom:100px;
-    z-index: -1;
+    z-index: 1;
     width:30%;
     height:100px;
 }
 
 #avatar-img{
+    z-index: 2;
     padding-top:11%;
 }
